final updates and fixes

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/edit_price"
                 style="@style/EditorFieldStyle"
                 android:hint="@string/hint_price"
-                android:inputType="textCapWords" />
+                android:inputType="numberDecimal" />
 
         </LinearLayout>
 
