--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,8 +14,8 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0">
 
             <TextView
                 android:id="@+id/name"
@@ -30,14 +30,25 @@
                 tools:text="The Last Black Unicorn" />
 
             <TextView
-                android:id="@+id/price"
+                android:id="@+id/dollar_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/name"
                 android:fontFamily="sans-serif"
+                android:text="$ "
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="#AEB6BD" />
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/name"
+                android:layout_toRightOf="@+id/dollar_sign"
+                android:fontFamily="sans-serif"
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textColor="#AEB6BD"
-                tools:text="$13.75" />
+                tools:text="13.75" />
 
             <TextView
                 android:id="@+id/quantity_label"
@@ -71,8 +82,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="@string/sale"
-                android:focusable="false"/>
+                android:focusable="false"
+                android:text="@string/sale" />
         </RelativeLayout>
     </LinearLayout>
 
