--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -77,7 +77,8 @@
                 android:gravity="center_horizontal"
                 android:hint="@string/hint_quantity"
                 android:inputType="number"
-                tools:text="0" />
+                android:maxLength="9"
+                tools:text="999999999" />
 
             <Button
                 android:id="@+id/button_subtractOne"
